Poprawki w index.html i style.css
Poprawka literówki
Zamiana w header paddingu na height
Utworzenie z sekcji II dwóch oddzielnych sekcji

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <main>
     <!-- SECTION I -->
      <section class="section-1">
-         <div class="cotnainer">
+         <div class="container">
         <h1 class="main-header">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU </h1>
         <div class="modal-btn-div">
        <button class="modal-btn" type="button"><span class="modal-btn-text">Zamów usługę</span></button>
@@ -70,7 +70,11 @@
             </li>
         </ul>   
         </div>
-        
+    </div>
+</section>
+<!-- SECTION III -->
+<section class="section-3">
+    <div class="container">
          <div>
         <h2 class="secondary-header">Czym sie zajmujemy</h2>
         <ul class="what-we-do-list">
@@ -80,9 +84,10 @@
         </ul>
         </div>
     </div>
-        </section>
-        <!-- SECTION III -->
-        <section class="section-3">
+</section>
+    
+        <!-- SECTION IV -->
+        <section class="section-4">
             <div class="container">
 <h2 class="secondary-header">Nasz zespół</h2>
 <ul class="workers-list">
